unpackaged/objects/Integration_Progress_Setting__mdt.object
<CustomObject>
  <fields>
    <fullName>Estimated_Finished_Date__c</fullName>
    <label>Estimated Finished Date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Estimated_Start_Date__c</fullName>
    <label>Estimated Start Date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>EMEA</fullName>
          <default>true</default>
          <label>EMEA</label>
        </value>
        <value>
          <fullName>US</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>GDW Integration</fullName>
          <default>true</default>
          <label>GDW Integration</label>
        </value>
        <value>
          <fullName>Azure Calculation</fullName>
        </value>
        <value>
          <fullName>Einstein Analytics</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Integration Progress Setting</label>
  <pluralLabel>Integration Progress Settings</pluralLabel>
</CustomObject>